# FastAPI_Image

./: .gitignore  README.md  main.py  requirements.txt  test.http
backend/: .gitignore  CMakeLists.txt  arnaque.txt  main.py  test.http
backend/src/: main.cpp
frontend/: package-lock.json
frontend/src/: App.jsx
